[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/platformer/Ladder_red.png" type="Texture" id=1]
[ext_resource path="res://scenes_two/LadderFixed.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 49.5, 339 )

[node name="LadderFixed" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 340 )
z_index = -2
texture = ExtResource( 1 )

[node name="on_ladder" type="Area2D" parent="."]

[node name="ladd_col" type="CollisionShape2D" parent="on_ladder"]
unique_name_in_owner = true
position = Vector2( 2.5, 169 )
shape = SubResource( 1 )

[connection signal="body_entered" from="on_ladder" to="." method="_on_on_ladder_body_entered"]
[connection signal="body_exited" from="on_ladder" to="." method="_on_on_ladder_body_exited"]
